projects/plex/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex

spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - plex.internal
    secretName: tls-selfsigned
  rules:
    - host: plex.internal
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  plex
                port:
                  number: 32400
